Fix: Add spacing when inclusive heading.
MT-740

--- a/src/scss/components/_article.scss
+++ b/src/scss/components/_article.scss
@@ -63,6 +63,12 @@
     margin-top: var(--space-section);
   }
 
+  section {
+    .inclusively-hidden + * {
+      margin-top: var(--space-section);
+    }
+  }
+
   &.children-full-width {
     @media only screen and (min-width: $breakpoint-large) {
       > * {
